--- a/index.html
+++ b/index.html
@@ -13,51 +13,18 @@
 <body>
     <div class="wrapper">
     <section class="info-wrapper">
-        <h1>Eric Rösmark</h1>
-        <h2>Graphic Design + Art Direction<br>
-        <a id="email" href="mailto:ericrosmark@gmail.com" target="_blank">ericrosmark@gmail.com</a></h2>
+        <h2>Eric Rösmark</h2>
         <div class="double-break"></div>
-        <p>Based in Stockholm, Sweden. As an interdisciplinary designer his practice sits in between art, design and architecture – striving to create conscious and precise results through design systems, user interaction and visual communication.</p>
+            <h2>Designer & Art Director</h2>
+            <h2><a href="mailto:ericrosmark@gmail.com" target="_blank">ericrosmark@gmail.com</a></h2>
+            <h2><a href="tel:+46704218696" target="_blank">+46 704-218-696</a></h2>
+        <div class="double-break"></div>
+        <p>Designer at <a href="https://boldscandinavia.com" target="_blank">Bold Scandinavia</a>.<br>
+        Graduated <a href="https://beckmans.se" target="_blank">Beckmans College of Design</a><br> 
+        in 2022 with a BFA in Visual Communication.<br>
+        Previously at <a href="https://esseninternational.com" target="_blank">Essen International</a>,<br>
+        <a href="https://stockholmdesignlab.se" target="_blank">Stockholm Design Lab</a>.</p>
         <div class="double-break" id="about-db"></div>
-        <div class="experience">
-        <h1>Experience</h1>
-        <div class="break"></div>
-        <h2>
-            <a href="https://esseninternational.com/" target="_blank">
-                <h1>Essen International</h1>
-                Junior Designer<br>
-                08/2022 – Present
-            </a>
-        </h2>
-        <div class="break"></div>
-            <h2>
-                <a href="http://stockholmdesignlab.se" target="_blank">
-                    <h1>Stockholm Design Lab</h1>
-                    Graphic Designer (Internship)<br>
-                    04/2021 – 08/2021
-                </a>
-            </h2>
-        <div class="double-break"></div>
-        </div>
-        <div class="education">
-        <h1>Education</h1>
-        <div class="break"></div>
-            <h2>
-                <a href="http://beckmans.se" target="_blank">
-                    <h1>Beckmans College of Design</h1>
-                    Visual Communication (BFA)<br>
-                    09/2019 – 06/2022
-                </a>
-            </h2>
-        <div class="break"></div>
-            <h2>
-                <a href="http://berghs.se" target="_blank">
-                    <h1>Berghs School of Communication</h1>
-                    Graphic Design (Evening classes)<br>
-                    02/2019 – 04/2019
-                </a>
-            </h2>
-        </div>
         <div class="footer">
             <div class="desktop-links">
                 <a href="https://www.instagram.com/ericrosmark/" target="_blank">Instagram</a><br>
@@ -145,7 +112,7 @@
                     </div>
                     <div class="text">
                         <p>passa /'pa,sa/. verb.</p>
-                        <p>n. 1. fit, suit; be suitable 2. fit; be of the right size and cut 3. pass 4. give, hand over 5. look after. An abstract timeline, told through poetry, about the store I worked in for 7 years. A series of three riso printed posters, printed on 200g watercolor paper, dimensions 297 × 420 mm (A3). <a href="https://abcdinamo.com/typefaces/favorit" target="_blank">Type set in Favorit by Dinamo Type.</a></p>
+                        <p>n. 1. fit, suit; be suitable 2. fit; be of the right size and cut 3. pass 4. give, hand over 5. look after. An abstract timeline, told through poetry, about the store I worked in for 7 years. A series of three riso printed posters, printed on 200g watercolor paper, dimensions 297 × 420 mm (A3). Type set in Favorit by Dinamo Type.</p>
                     </div>
                     <div class="year">
                         <h2>2021</h2>
@@ -194,9 +161,7 @@
                         <h2>Web Design</h2>
                     </div>
                     <div class="text">
-                        <p>Visual identity made in collaboration with the second year fashion students at Beckmans College of Design showcasing the creation of magic from materials. The project was realized through a responsive website, a short film, still photography of all 35 looks as well as 13 close-up 3D scans of the materials used to create the different garments. Made in collaboration with Alexander Peri, Alva Nylander, Hedvig Moberg, Joel Eriksson, Linnea Jacobson & Tuva Larsson.</p>
-                        <div class="break"></div>
-                        <a id="email" href="https://beckmans.college/materialtales" target="_blank"><p>Experience the visual world of Material Tales</p></a>
+                        <p>Visual identity made in collaboration with the second year fashion students at Beckmans College of Design showcasing the creation of magic from materials. The project was realized through a responsive website, a short film, still photography of all 35 looks as well as 13 close-up 3D scans of the materials used to create the different garments. Made in collaboration with Alexander Peri, Alva Nylander, Hedvig Moberg, Joel Eriksson, Linnea Jacobson & Tuva Larsson. Experience the visual world of <a href="https://beckmans.college/materialtales" target="_blank">Material Tales.</p></a>
                     </div>
                     <div class="year">
                         <h2>2020</h2>
@@ -241,7 +206,7 @@
                         <h2>Graphic Design</h2>
                     </div>
                     <div class="text">
-                        <p>Degree Project from Beckman College of Design. Rötter is a visual exploration and documentation of my grandmother's brother Per Rösmarks life and artistry. Per committed suicide at the age of 28 leaving behind an immense amount of art. Although I've never met Per he's always been present both in conversations and on the walls. The project is a process and an attempt to get to know a person by making an artistic collaboration through our related practices. Rötter was realised in a 112 page hand bound book with a link stitched open spine, all set in Neue Haas Grotesk. Displayed at the graduation exhibition <a href=”https://www.beckmans.se/2022”>Formation at Beckmans College of Design</a> in the spring of 2022.</p>
+                        <p>Degree Project from Beckman College of Design. Rötter is a visual exploration and documentation of my grandmother's brother Per Rösmarks life and artistry. Per committed suicide at the age of 28 leaving behind an immense amount of art. Although I've never met Per he's always been present both in conversations and on the walls. The project is a process and an attempt to get to know a person by making an artistic collaboration through our related practices. Rötter was realised in a 112 page hand bound book with a link stitched open spine, all set in Neue Haas Grotesk. Displayed at the graduation exhibition <a href=”https://www.beckmans.se/2022”>Formation</a> at Beckmans College of Design in the spring of 2022.</p>
                     </div>
                     <div class="year">
                         <h2>2022</h2>
@@ -323,9 +288,7 @@
                         <h2>Web Design</h2>
                     </div>
                     <div class="text">
-                        <p>Visual Identity and digital platform for Beckmans College of Design's degree exhibition 2022. Formation, the action of forming or process of being formed, is the culmination of the journey all students undergo during their three years at Beckmans College of Design. The school provides the tools which the student use to shape their own design processes, as well as themselves into designers. My key responsibility was to design the website in close collaboration with developer Vincent Orback. Visual identity made in collaboration with: Jonna Lindberg, Maja Schein and Sara Solén.</p>
-                        <div class="break"></div>
-                        <a id="email" href="https://beckmans.se/2022" target="_blank"><p>Explore the digital platform for Formation</p></a>
+                        <p>Visual Identity and digital platform for Beckmans College of Design's degree exhibition 2022. Formation, the action of forming or process of being formed, is the culmination of the journey all students undergo during their three years at Beckmans College of Design. The school provides the tools which the student use to shape their own design processes, as well as themselves into designers. My key responsibility was to design the website in close collaboration with developer Vincent Orback. Visual identity made in collaboration with: Jonna Lindberg, Maja Schein and Sara Solén. Explore the digital platform for <a href="https://beckmans.se/2022" target="_blank">Formation.</p></a>
                     </div>
                     <div class="year">
                         <h2>2022</h2>
@@ -361,9 +324,7 @@
                         <h2>3D Design</h2>
                     </div>
                     <div class="text">
-                        <p>Conceptual album cover for The Glow Pt.2 (2001) by The Microphones. Mixed media techniques featuring 3D typography inspired by black metal logotypes. The back sleeve features poetry that interprets the album's title track in swedish. Made as part of the course "Poesi att göra" at Beckmans College of Design.
-                        <!--<div class="double-break"></div>
-                        <a id="email" href=”https://pwelverumandsun.bandcamp.com/album/the-glow-pt-2”>Listen to the album and support Phil Elverums work.</a>--></p>
+                        <p>Conceptual album cover for The Glow Pt.2 (2001) by The Microphones. Mixed media techniques featuring 3D typography inspired by black metal logotypes. The back sleeve features poetry that interprets the album's title track in swedish. Made as part of the course "Poesi att göra" at Beckmans College of Design.</p>
                     </div>
                     <div class="year">
                         <h2>2020</h2>
@@ -400,7 +361,7 @@
                         <h2>Web Design</h2>
                     </div>
                     <div class="text">
-                        <p>Have you ever thought about how different vegetables taste depending on what season it is? It can feel difficult to be seasonally smart when navigating through the vegetable counter when we're shopping. Grönsaksdisken (The Vegetable Counter) is an application that helps you stay seasonally smart, all year round, and helps us contribute towards a more sustainable planet! Displayed at the exhibition <a href=”https://www.svenskttenn.com/se/sv/utstallningar/food-for-thought/”>Food for Thought at Svenskt Tenn</a> in the spring of 2021. Made in collaboration with Jonna Lindberg.</p>
+                        <p>Have you ever thought about how different vegetables taste depending on what season it is? It can feel difficult to be seasonally smart when navigating through the vegetable counter when we're shopping. Grönsaksdisken (The Vegetable Counter) is an application that helps you stay seasonally smart, all year round, and helps us contribute towards a more sustainable planet! Displayed at the exhibition <a href=”https://www.svenskttenn.com/se/sv/utstallningar/food-for-thought/”>Food for Thought</a> at Svenskt Tenn in the spring of 2021. Made in collaboration with Jonna Lindberg.</p>
                     </div>
                     <div class="year">
                         <h2>2021</h2>
@@ -447,59 +408,12 @@
                     </div>
                 </div>
             </div>
-        </section>
-
-        
-        <section class="info-wrapper-mobile">
-        <div class="experience-mobile">
-            <h1>Experience</h1>
-            <div class="break"></div>
-            <h2>
-                <a href="https://esseninternational.com/" target="_blank">
-                    <h1>Essen International</h1>
-                    Junior Designer<br>
-                    08/2022 – Present
-                </a>
-            </h2>
-            <div class="break"></div>
-                <h2>
-                    <a href="http://stockholmdesignlab.se" target="_blank">
-                        <h1>Stockholm Design Lab</h1>
-                        Graphic Designer (Internship)<br>
-                        04/2021 – 08/2021
-                    </a>
-                </h2>
-            <div class="double-break"></div>
-            </div>
-            <div class="education-mobile">
-            <h1>Education</h1>
-            <div class="break"></div>
-                <h2>
-                    <a href="http://beckmans.se" target="_blank">
-                        <h1>Beckmans College of Design</h1>
-                        Visual Communication (BFA)<br>
-                        09/2019 – 06/2022
-                    </a>
-                </h2>
-            <div class="break"></div>
-                <h2>
-                    <a href="http://berghs.se" target="_blank">
-                        <h1>Berghs School of Communication</h1>
-                        Graphic Design (Evening classes)<br>
-                        02/2019 – 04/2019
-                    </a>
-                </h2>
-            </div>
-            <div class="double-break"></div>
-            <div class="footer-mobile">
-                <div class="desktop-links">
-                    <a href="https://www.instagram.com/ericrosmark/" target="_blank">Instagram</a><br>
-                    <a href="https://www.linkedin.com/in/ericrosmark/" target="_blank">LinkedIn</a><br>
-                    <div class="break"></div>
-                    <h2>© 2023</h2>
-                </div>
-            </div>
-        </div>
+            <!--<div id="mobile-links">
+                <a href="https://www.instagram.com/ericrosmark/" target="_blank">Instagram</a><br>
+                <a href="https://www.linkedin.com/in/ericrosmark/" target="_blank">LinkedIn</a><br>
+                <div class="break"></div>
+                <h2 id="year-mobile">© 2023</h2>
+            </div>-->
         </section>
     </div>
 </div>
