--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="desktop-links">
                 <a href="https://www.instagram.com/ericrosmark/" target="_blank">Instagram</a><br>
                 <a href="https://www.linkedin.com/in/ericrosmark/" target="_blank">LinkedIn</a><br>
-                <div class="break"></div>
+                <div class="double-break"></div>
                 <h2>© 2023</h2>
             </div>
         </div>
@@ -112,7 +112,7 @@
                     </div>
                     <div class="text">
                         <p>passa /'pa,sa/. verb.</p>
-                        <p>n. 1. fit, suit; be suitable 2. fit; be of the right size and cut 3. pass 4. give, hand over 5. look after. An abstract timeline, told through poetry, about the store I worked in for 7 years. A series of three riso printed posters, printed on 200g watercolor paper, dimensions 297 × 420 mm (A3). Type set in Favorit by Dinamo Type.</p>
+                        <p>n. 1. fit, suit; be suitable 2. fit; be of the right size and cut 3. pass 4. give, hand over 5. look after. An abstract timeline, told through poetry, about the store I worked in for 7 years. A series of three riso printed posters, printed on 200g watercolor paper, dimensions 297 × 420 mm (A3). Type set in <a href="https://abcdinamo.com/typefaces/favorit">Favorit</a> by Dinamo Type.</p>
                     </div>
                     <div class="year">
                         <h2>2021</h2>
@@ -161,7 +161,7 @@
                         <h2>Web Design</h2>
                     </div>
                     <div class="text">
-                        <p>Visual identity made in collaboration with the second year fashion students at Beckmans College of Design showcasing the creation of magic from materials. The project was realized through a responsive website, a short film, still photography of all 35 looks as well as 13 close-up 3D scans of the materials used to create the different garments. Made in collaboration with Alexander Peri, Alva Nylander, Hedvig Moberg, Joel Eriksson, Linnea Jacobson & Tuva Larsson. Experience the visual world of <a href="https://beckmans.college/materialtales" target="_blank">Material Tales.</p></a>
+                        <p>Visual identity made in collaboration with the second year fashion students at Beckmans College of Design showcasing the creation of magic from materials. The project was realized through a responsive website, a short film, still photography of all 35 looks as well as 13 close-up 3D scans of the materials used to create the different garments. Made in collaboration with Alexander Peri, Alva Nylander, Hedvig Moberg, Joel Eriksson, Linnea Jacobson & Tuva Larsson. Experience the visual world of <a href="https://beckmans.college/materialtales" target="_blank">Material Tales</a>.</p>
                     </div>
                     <div class="year">
                         <h2>2020</h2>
