--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
                 <h2>© 2023</h2>
             </div>
         </div>
+        <div id="text">
+            (b. 1995) Based in Stockholm, Sweden.<br> 
+            As an interdisciplinary designer, his practice<br> 
+            sits in between art, design and architecture <br>
+            – striving to create conscious and precise<br> 
+            results through design systems, user <br>
+            interaction and visual communication.
+        </div>
     </section>  
     <div class="project-wrapper">
         
@@ -408,12 +416,6 @@
                     </div>
                 </div>
             </div>
-            <!--<div id="mobile-links">
-                <a href="https://www.instagram.com/ericrosmark/" target="_blank">Instagram</a><br>
-                <a href="https://www.linkedin.com/in/ericrosmark/" target="_blank">LinkedIn</a><br>
-                <div class="break"></div>
-                <h2 id="year-mobile">© 2023</h2>
-            </div>-->
         </section>
     </div>
 </div>
